# e621_source_cleanup

./: pyproject.toml  todo.md
e621_gallery_finder/: database.py  db_schema.sql  e621_api.py  main.py  new_source.py  post_issues.py  source_checks.py  web.py
e621_gallery_finder/static/: style.css
e621_gallery_finder/templates/: base.html  check.html  check_js.html  check_post.html  home.html  login.html
e621_source_cleanup/: main.py
e621_source_cleanup/checks/: base.py  deviantart.py  formatting.py  furaffinity.py  inkbunny.py  misuse.py  protocols.py  todo.md  twitfix.py  twitter.py
