[tool.poetry]
name = "e621_source_cleanup"
version = "0.1.0"
description = "A script to cleanup e621 sources, which seem to be in a dire state"
authors = ["Deer-Spangle <deer@spangle.org.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
